; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_http.c_net_http_delete.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_http.c_net_http_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.http_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @net_http_delete(%struct.http_t* %0) #0 {
  %2 = alloca %struct.http_t*, align 8
  store %struct.http_t* %0, %struct.http_t** %2, align 8
  %3 = load %struct.http_t*, %struct.http_t** %2, align 8
  %4 = icmp ne %struct.http_t* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %21

6:                                                ; preds = %1
  %7 = load %struct.http_t*, %struct.http_t** %2, align 8
  %8 = getelementptr inbounds %struct.http_t, %struct.http_t* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp sge i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %6
  %13 = load %struct.http_t*, %struct.http_t** %2, align 8
  %14 = getelementptr inbounds %struct.http_t, %struct.http_t* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @socket_close(i64 %16)
  br label %18

18:                                               ; preds = %12, %6
  %19 = load %struct.http_t*, %struct.http_t** %2, align 8
  %20 = call i32 @free(%struct.http_t* %19)
  br label %21

21:                                               ; preds = %18, %5
  ret void
}

declare dso_local i32 @socket_close(i64) #1

declare dso_local i32 @free(%struct.http_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
